# CudaCodeJottings

./: .gitignore  CMakeLists.txt  README.md
include/: all_in_one.h
include/common/: helper_cuda_drvapi.h  helper_math.h  helper_string.h
include/kernel/: math.h  my_math.h
include/profiler/: profiler.h
src/: CMakeLists.txt
src/kernel/: add.cpp  add.cu  softmax.cpp
src/profiler/: CMakeLists.txt  profiler.cc
test/: CMakeLists.txt
test/add_test/: CMakeLists.txt  add_test.cu  test_add.cu  test_softmax.cu
test/cpp11_cuda/: CMakeLists.txt  cpp11_cuda.cu
test/cuda_samples/: CMakeLists.txt  README.md
test/cuda_samples/0_Introduction/: CMakeLists.txt  README.md
test/cuda_samples/0_Introduction/async_api/: CMakeLists.txt
test/cuda_samples/0_Introduction/concurrent_kernels/: CMakeLists.txt
test/cuda_samples/0_Introduction/cpp11_cuda/: range.hpp
test/cuda_samples/0_Introduction/cpp_integration/: CMakeLists.txt  cpp_integration_gold.cpp
test/cuda_samples/0_Introduction/cpp_overload/: CMakeLists.txt  cpp_overload.cu  cpp_overload_kernel.cuh
test/cuda_samples/0_Introduction/cuda_openmp/: CMakeLists.txt
test/cuda_samples/0_Introduction/matrix_mul/: CMakeLists.txt
test/cuda_samples/0_Introduction/matrix_mul_driver/: CMakeLists.txt  matrixMul_kernel.cu  matrix_mul_driver.cpp
test/cuda_samples/0_Introduction/simple_AW_barrier/: CMakeLists.txt
test/cuda_samples/0_Introduction/simple_assert/: CMakeLists.txt
test/cuda_samples/clock/: CMakeLists.txt  clock.cu
test/cuda_samples/concurrent_kernels/: concurrent_kernels.cu
test/cuda_samples/cpp_integration/: cpp_integration.cu  main.cpp
test/cuda_samples/cuda_openmp/: cuda_openmp.cu
test/cuda_samples/fp16_scalar_product/: CMakeLists.txt  fp16_scalar_product.cu
test/cuda_samples/matrix_mul/: matrix_mul.cu
test/cuda_samples/unified_memory_streams/: CMakeLists.txt  unified_memory_streams.cu
test/data/: warandpeace.txt
test/hello_world/: CMakeLists.txt  hello_world.cu
